fixes to be startable on android, windows II